Fixed horizontal scrolling

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -25,7 +25,7 @@ body {
   color: $text-color;
   font-family: $font-family-main;
   font-size: $font-size;
-  word-wrap: break-word;
+  //word-wrap: break-word;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-headings;
@@ -127,3 +127,4 @@ img[align=left] {
 img[align=right] {
   margin-left: 3%;
 }
+
